Adds Blocks C and D

--- a/Joe_pandas.ipynb
+++ b/Joe_pandas.ipynb
@@ -138,6 +138,40 @@
     "max_correct = df['# Correct'].____()     # Use the max function\n",
     "min_correct = df['# Correct'].____()     # Use the min function\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pandas is a data manipulation library - we import it as pd by convention\n",
+    "import pandas as pd\n",
+    "\n",
+    "# matplotlib is for creating visualizations - we import pyplot as plt by convention\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# read_csv() is a pandas function that loads data from a CSV file into a DataFrame\n",
+    "df = pd.read_csv('Pandas_Lesson_Grades.csv')\n",
+    "\n",
+    "# Boolean conditions create a Series of True/False values\n",
+    "high_correct_mask = df['# Correct'] > 5\n",
+    "print(\"Boolean mask:\")\n",
+    "print(high_correct_mask.head())\n",
+    "\n",
+    "# Use the mask to filter the DataFrame\n",
+    "high_correct_questions = df[high_correct_mask]\n",
+    "print(\"\\nQuestions with more than 5 correct answers:\")\n",
+    "print(high_correct_questions[['Primary Key A', '# Correct']])\n",
+    "\n",
+    "# Your turn - create filters for:\n",
+    "# Questions where 'A' was the primary answer\n",
+    "a_questions = df[df['# Pri. Ans.'] == ____]\n",
+    "\n",
+    "# Questions with more than 50% correct (hint: use '% Correct' column)\n",
+    "high_percentage = df[df['% Correct'] > ____]\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
